Fixed some Sonar's issues